LU-5977 ofd: Removed correction for bad timestamps

Removed a correction made to handle a bug with negative
timestamps in Lustre 2.1.0.

Signed-off-by: Giuseppe Di Natale <dinatale2@llnl.gov>
Change-Id: I8bddd4370ac907a794b4b1c41062de482bee42f4
Reviewed-on: http://review.whamcloud.com/16077
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Jenkins
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>